--- a/DiplomaWorkStudyPlatform/src/main/resources/templates/create_test_page.html
+++ b/DiplomaWorkStudyPlatform/src/main/resources/templates/create_test_page.html
@@ -8,17 +8,18 @@
 
     <link rel="stylesheet" href="/styles.css">
     <script src="/create_test.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
 <div class="dashboard">
     <div class="sidebar">
         <div class="sidebar-buttons">
-            <a th:href="@{/teacher_home}" class="btn btn-primary">My courses</a>
-            <a th:href="@{/teacher_tests}" class="btn btn-primary">My tests</a>
-            <a th:href="@{/teacher_students}" class="btn btn-primary">My students</a>
-            <a th:href="@{/teacher_home}" class="btn btn-primary">Settings</a>
+            <H3>Teacher</H3>
+            <i class="fas fa-chalkboard-teacher fa-4x"></i>
+            <a th:href="@{/teacher_home}" class="btn btn-primary">Courses <i class="fa-solid fa-table"></i></a>
+            <a th:href="@{/teacher_tests}" class="btn btn-primary">Tests <i class="fa-solid fa-list-ul"></i></a>
+            <a th:href="@{/teacher_students}" class="btn btn-primary">Students <i class="fa-solid fa-user-graduate"></i></a>
         </div>
     </div>
     <div class="content" id="content">
@@ -42,9 +43,9 @@
             </div>
 
             <div class="form-button-container">
-                <button type="button" id="addSingleChoiceQuestion" class="form-button">Add Single Choice Question</button>
-                <button type="button" id="addMultipleChoiceQuestion" class="form-button">Add Multiple Choice Question</button>
-                <button type="button" id="addWordQuestion" class="form-button">Add Word Question</button>
+                <button type="button" id="addSingleChoiceQuestion" class="form-button">Add Single Choice Question <i class="fa-solid fa-plus"></i></button>
+                <button type="button" id="addMultipleChoiceQuestion" class="form-button">Add Multiple Choice Question <i class="fa-solid fa-plus"></i></button>
+                <button type="button" id="addWordQuestion" class="form-button">Add Word Question <i class="fa-solid fa-plus"></i></button>
             </div>
 
             <div class="form-group">
@@ -56,14 +57,21 @@
                 </select>
             </div>
 
-            <button type="submit" class="form-button form-button-submit">Create Test</button>
+            <button type="submit" class="form-button form-button-submit">Create Test <i class="fa-solid fa-file-arrow-down"></i> </button>
         </form>
     </div>
     <div class="user-info">
         <div class="user-name">
             <h2>Welcome back, <span th:text="${fullName}">User's name</span></h2>
+            <div class="user-stats">
+                <ul>
+                    <li><i class="fas fa-book"></i> Number of created courses: <span th:text="${courseCount}">0</span></li>
+                    <li><i class="fas fa-file-alt"></i> Number of created tests: <span th:text="${testCount}">0</span></li>
+                    <li><i class="fas fa-users"></i> Number of students: <span th:text="${studentCount}">0</span></li>
+                </ul>
+            </div>
         </div>
-        <a th:href="@{/login}" class="logout-btn">Logout</a>
+        <a th:href="@{/login}" class="logout-btn">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
     </div>
 </div>
 
