--- a/DiplomaWorkStudyPlatform/src/main/resources/templates/student_home_page.html
+++ b/DiplomaWorkStudyPlatform/src/main/resources/templates/student_home_page.html
@@ -9,16 +9,19 @@
     <script src="/search_sort.js"></script>
     <script src="/course_delete.js"></script>
     <script src="/course_leave.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
 
 <div class="dashboard">
     <div class="sidebar">
         <div class="sidebar-buttons">
-            <a th:href="@{/student_home}" class="btn btn-primary">My courses</a>
-            <a th:href="@{/student_tests}" class="btn btn-primary">My results</a>
-            <a th:href="@{/student_teachers}" class="btn btn-primary">My teachers</a>
-            <a th:href="@{/student_home}" class="btn btn-primary">Settings</a>
+            <H3>Student</H3>
+            <i class="fas fa-chalkboard-teacher fa-4x"></i>
+            <a th:href="@{/student_home}" class="btn btn-primary">Courses <i class="fa-solid fa-table"></i> </a>
+            <a th:href="@{/student_tests}" class="btn btn-primary">Results <i class="fa-solid fa-list-ul"></i> </a>
+            <a th:href="@{/student_teachers}" class="btn btn-primary">Teachers <i class="fas fa-chalkboard-teacher fa-1x"></i></a>
         </div>
     </div>
     <div class="content" id="content">
@@ -48,9 +51,9 @@
                     <td th:text="${coursePoints[course.id]}"></td>
                     <td class="button-container">
                         <a th:href="@{'/student_view_course/' + ${course.id}}">
-                            <button class="view-button">View</button>
+                            <button class="view-button">View <i class="fa-solid fa-eye"></i> </button>
                         </a>
-                        <button class="delete-button" th:onclick="'leaveCourse(\'' + ${course.id} + '\')'" >Leave</button>
+                        <button class="delete-button" th:onclick="'leaveCourse(\'' + ${course.id} + '\')'" >Leave <i class="fa-solid fa-arrow-right-from-bracket"></i> </button>
                     </td>
                 </tr>
                 </tbody>
@@ -60,15 +63,23 @@
             <div th:if="${error}" class="alert alert-danger" th:text="${error}"></div>
             <form class="join-course-form" th:action="@{/join_course}" method="post">
                 <input type="text" name="courseKey" placeholder="Enter course key" required>
-                <button type="submit" class="btn btn-primary">Join course</button>
+                <button type="submit" class="btn btn-primary">Join course <i class="fa-solid fa-plus"></i> </button>
             </form>
         </div>
     </div>
     <div class="user-info">
         <div class="user-name">
-            <h2>Welcome back, <span th:text="${fullName}">User's name</span></h2>
+            <h3>Welcome back, <span th:text="${fullName}">User's name</span></h3>
+            <div class="user-stats">
+                <ul>
+                    <li><i class="fas fa-book"></i> Number of courses you have joined: <span th:text="${courseCount}">0</span></li>
+                    <li><i class="fas fa-file-alt"></i> Number of passed tests: <span th:text="${passedTests}">0</span></li>
+                    <li><i class="fas fa-file-alt"></i> Number of tests to be passed: <span th:text="${notPassedTests}">0</span></li>
+                    <li><i class="fas fa-users"></i> Number of your teachers: <span th:text="${studentTeachers}">0</span></li>
+                </ul>
+            </div>
         </div>
-        <a th:href="@{/login}" class="logout-btn">Logout</a>
+        <a th:href="@{/login}" class="logout-btn">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
     </div>
 </div>
 
