--- a/DiplomaWorkStudyPlatform/src/main/resources/templates/student_teachers_page.html
+++ b/DiplomaWorkStudyPlatform/src/main/resources/templates/student_teachers_page.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+
     <link rel="stylesheet" href="/styles.css">
-    <script src="/test_start.js"></script>
+    <script src="/search_sort.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
 <div class="dashboard">
@@ -20,13 +22,29 @@
         </div>
     </div>
     <div class="content" id="content">
-        <div class="test-details">
-            <h2 th:text="'Test: ' + ${test.title}">Test Title</h2>
-            <form id="testForm">
-                <input type="hidden" id="testId" th:value="${test.id}">
-                <div id="test-content" th:data-content="${test.content}"></div>
-                <button type="submit" class="btn btn-primary" id="submitButton">Submit <i class="fa-solid fa-file-arrow-down"></i></button>
-            </form>
+        <h2>My teachers</h2>
+        <div th:if="${studentTeachers.isEmpty()}">
+            <p>You don't have any teachers.</p>
+        </div>
+        <div th:if="${!studentTeachers.isEmpty()}" id="teacherCourses" class="course-container">
+            <table class="styled-table">
+                <thead>
+                <tr>
+                    <th scope="col">
+                        <div class="search-container">
+                            <label for="searchInput">Search by Name:</label>
+                            <input type="text" id="searchInput" name="searchInput">
+                        </div>
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="teacher : ${studentTeachers}" th:id="'course_' + ${teacher.id}">
+                    <td th:text="${teacher.fullName}"></td>
+
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
     <div class="user-info">
@@ -37,7 +55,7 @@
                     <li><i class="fas fa-book"></i> Number of courses you have joined: <span th:text="${courseCount}">0</span></li>
                     <li><i class="fas fa-file-alt"></i> Number of passed tests: <span th:text="${passedTests}">0</span></li>
                     <li><i class="fas fa-file-alt"></i> Number of tests to be passed: <span th:text="${notPassedTests}">0</span></li>
-                    <li><i class="fas fa-users"></i> Number of your teachers: <span th:text="${studentTeachers}">0</span></li>
+                    <li><i class="fas fa-users"></i> Number of your teachers: <span th:text="${studentTeachersList}">0</span></li>
                 </ul>
             </div>
         </div>
