--- a/DiplomaWorkStudyPlatform/src/main/resources/templates/teacher_students_page.html
+++ b/DiplomaWorkStudyPlatform/src/main/resources/templates/teacher_students_page.html
@@ -6,17 +6,19 @@
     <title>Dashboard</title>
 
     <link rel="stylesheet" href="/styles.css">
-
+    <script src="/search_sort.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
 <body>
 <div class="dashboard">
     <div class="sidebar">
         <div class="sidebar-buttons">
-            <a th:href="@{/teacher_home}" class="btn btn-primary">My courses</a>
-            <a th:href="@{/teacher_tests}" class="btn btn-primary">My tests</a>
-            <a th:href="@{/teacher_students}" class="btn btn-primary">My students</a>
-            <a th:href="@{/teacher_home}" class="btn btn-primary">Settings</a>
+            <H3>Teacher</H3>
+            <i class="fas fa-chalkboard-teacher fa-4x"></i>
+            <a th:href="@{/teacher_home}" class="btn btn-primary">Courses <i class="fa-solid fa-table"></i></a>
+            <a th:href="@{/teacher_tests}" class="btn btn-primary">Tests <i class="fa-solid fa-list-ul"></i></a>
+            <a th:href="@{/teacher_students}" class="btn btn-primary">Students <i class="fa-solid fa-user-graduate"></i></a>
         </div>
     </div>
     <div class="content" id="content">
@@ -25,12 +27,12 @@
             <p>You don't have any students.</p>
         </div>
         <div th:if="${!teacherStudent.isEmpty()}" id="teacherCourses" class="course-container">
-            <table>
+            <table class="styled-table">
                 <thead>
                 <tr>
                     <th scope="col">
                         <div class="search-container">
-                            <label for="searchInput">Search by Title:</label>
+                            <label for="searchInput">Search by Name:</label>
                             <input type="text" id="searchInput" name="searchInput">
                         </div>
                     </th>
@@ -42,9 +44,9 @@
                     <td th:text="${student.fullName}"></td>
                     <td class="button-container">
                         <a th:href="@{'/teacher_view_student/' + ${student.id}}">
-                            <button class="view-button">View</button>
+                            <button class="view-button">View  <i class="fa-solid fa-eye"></i></button>
                         </a>
-                        <button class="delete-button" th:onclick="'deleteStudent(\'' + ${student.id} + '\')'" >Delete from all courses</button>
+                        <button class="delete-button" th:onclick="'deleteStudent(\'' + ${student.id} + '\')'" >Delete from all courses <i class="fa-solid fa-trash"></i></button>
                     </td>
                 </tr>
                 </tbody>
@@ -54,8 +56,15 @@
     <div class="user-info">
         <div class="user-name">
             <h2>Welcome back, <span th:text="${fullName}">User's name</span></h2>
+            <div class="user-stats">
+                <ul>
+                    <li><i class="fas fa-book"></i> Number of created courses: <span th:text="${courseCount}">0</span></li>
+                    <li><i class="fas fa-file-alt"></i> Number of created tests: <span th:text="${testCount}">0</span></li>
+                    <li><i class="fas fa-users"></i> Number of students: <span th:text="${studentCount}">0</span></li>
+                </ul>
+            </div>
         </div>
-        <a th:href="@{/login}" class="logout-btn">Logout</a>
+        <a th:href="@{/login}" class="logout-btn">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
     </div>
 </div>
 </body>
