--- a/DiplomaWorkStudyPlatform/src/main/resources/templates/teacher_tests_page.html
+++ b/DiplomaWorkStudyPlatform/src/main/resources/templates/teacher_tests_page.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles.css">
     <script src="/search_sort.js"></script>
     <script src="/test_delete.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -15,16 +16,17 @@
 <div class="dashboard">
     <div class="sidebar">
         <div class="sidebar-buttons">
-            <a th:href="@{/teacher_home}" class="btn btn-primary">My courses</a>
-            <a th:href="@{/teacher_tests}" class="btn btn-primary">My tests</a>
-            <a th:href="@{/teacher_students}" class="btn btn-primary">My students</a>
-            <a th:href="@{/teacher_home}" class="btn btn-primary">Settings</a>
+            <H3>Teacher</H3>
+            <i class="fas fa-chalkboard-teacher fa-4x"></i>
+            <a th:href="@{/teacher_home}" class="btn btn-primary">Courses <i class="fa-solid fa-table"></i></a>
+            <a th:href="@{/teacher_tests}" class="btn btn-primary">Tests <i class="fa-solid fa-list-ul"></i></a>
+            <a th:href="@{/teacher_students}" class="btn btn-primary">Students <i class="fa-solid fa-user-graduate"></i></a>
         </div>
     </div>
     <div class="content" id="content">
         <h2>My tests</h2>
         <div id="teacherTests" class="course-container">
-            <table>
+            <table class="styled-table">
                 <thead>
                 <tr>
                     <th scope="col">
@@ -43,26 +45,33 @@
                     <td th:text="${test.points}"></td>
                     <td class="button-container">
                         <a th:href="@{'/teacher_view_test/' + ${test.id}}">
-                            <button class="view-button">View</button>
+                            <button class="view-button">View <i class="fa-solid fa-eye"></i></button>
                         </a>
                         <a th:href="@{'/teacher_edit_test/' + ${test.id}}">
-                            <button class="edit-button">Edit</button>
+                            <button class="edit-button">Edit <i class="fa-solid fa-pen-to-square"></i></button>
                         </a>
-                        <button class="delete-button" th:onclick="'deleteTest(\'' + ${test.id} + '\')'" id="deleteTestBtn">Delete</button>
+                        <button class="delete-button" th:onclick="'deleteTest(\'' + ${test.id} + '\')'" id="deleteTestBtn">Delete <i class="fa-solid fa-trash"></i></button>
                     </td>
                 </tr>
                 </tbody>
             </table>
         </div>
         <div class="content-buttons">
-            <a th:href="@{/teacher_create_test}" class="create-course-btn">Create test</a>
+            <a th:href="@{/teacher_create_test}" class="create-course-btn">Create test <i class="fa-solid fa-plus"></i></a>
         </div>
     </div>
     <div class="user-info">
         <div class="user-name">
             <h2>Welcome back, <span th:text="${fullName}">User's name</span></h2>
+            <div class="user-stats">
+                <ul>
+                    <li><i class="fas fa-book"></i> Number of created courses: <span th:text="${courseCount}">0</span></li>
+                    <li><i class="fas fa-file-alt"></i> Number of created tests: <span th:text="${testCount}">0</span></li>
+                    <li><i class="fas fa-users"></i> Number of students: <span th:text="${studentCount}">0</span></li>
+                </ul>
+            </div>
         </div>
-        <a th:href="@{/login}" class="logout-btn">Logout</a>
+        <a th:href="@{/login}" class="logout-btn">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
     </div>
 </div>
 </body>
